--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^6.0.2
   firebase_core: ^1.10.6
   cloud_firestore: ^3.1.4
+  image_picker: ^0.8.5
+  image_cropper: ^1.5.1
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
