firestore collection 생성 후 채팅 시 닉네임 받아오기

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dash_chat: ^1.1.15
+  sendbird_sdk: ^3.1.12
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,6 +54,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  logger: ^1.1.0
+  mime: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,9 +69,9 @@ flutter:
   uses-material-design: true
   
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -94,3 +98,22 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  fonts: 
+    - family: Gellix
+      fonts: 
+        - asset: assets/gellix/Gellix-Regular.otf
+        - asset: assets/gellix/Gellix-Black.otf
+          weight: 900
+        - asset: assets/gellix/Gellix-ExtraBold.otf
+          weight: 800
+        - asset: assets/gellix/Gellix-Bold.otf
+          weight: 700
+        - asset: assets/gellix/Gellix-SemiBold.otf
+          weight: 600
+        - asset: assets/gellix/Gellix-Medium.otf
+          weight: 500
+        - asset: assets/gellix/Gellix-Light.otf
+          weight: 300
+        - asset: assets/gellix/Gellix-Thin.otf
+          weight: 100
